-----------------
Added CAnimation
Added CComboBox  
Added CComboBoxEx
Added CProgressbar 
Added CResizer 
Added CScrollbar 
Added CSlider 
Added CSpinButton
Added Shared_Ptr
Added CThread 
Updated CSocket to support IPv6
Added CPropertySheet::SetIcon
Added CRebar::SizeToRect
Added CSocket::IsIPV6Supported
Added CSocket::FreeAddrInfo
Added CSocket::GetAddrInfo
Added CSocket::GetLastError
Added CToolbar::AddButtons
Added CToolbar::AddString
Added CToolbar::AutoSize
Added CToolbar::CheckButton 
Added CToolbar::DeleteButton   
Added CToolbar::GetButton
Added CToolbar::GetButtonSize
Added CToolbar::GetButtonText
Added CToolbar::GetDisabledImageList
Added CToolbar::GetHotItem
Added CToolbar::GetImageList
Added CToolbar::GetPadding
Added CToolbar::GetRect
Added CToolbar::GetRows
Added CToolbar::GetTextRows
Added CToolbar::GetToolTips
Added CToolbar::HideButton
Added CToolbar::Indeterminate
Added CToolbar::InsertButton
Added CToolbar::IsButtonHidden
Added CToolbar::IsButtonHighlighted
Added CToolbar::IsButtonIndeterminate
Added CToolbar::IsButtonPressed
Added CToolbar::MapAccelerator
Added CToolbar::MarkButton
Added CToolbar::MoveButton
Added CToolbar::PressButton
Added CToolbar::SaveRestore
Added CToolbar::SetDisabledImageList
Added CToolbar::SetDrawTextFlags
Added CToolbar::SetExtendedStyle
Added CToolbar::SetHotImageList
Added CToolbar::SetHotItem
Added CToolbar::SetImageList
Added CToolbar::SetIndent
Added CToolbar::SetMaxTextRows
Added CToolbar::SetPadding
Added CToolbar::SetToolTips
Added CWinException::what
Added CWnd::GetFont
Added CWnd::GetIcon
Added CWnd::GetLastActivePopup
Added CWnd::GetTopWindow
Added CWnd::GetWindowTextLength
Added CWnd::OpenIcon
Added CWnd::SetFont
Added CWnd::SetIcon
Added CWnd::SetWindowTheme
Added CWnd::ShowOwnedPopups
Added CWnd::ShowWindowAsync
Added ::IsAeroThemed
Modified CSocket::Bind          now uses TCHAR instead of char
Modified CSocket::Connect       now uses TCHAR instead of char